<resources>
    <string name="app_name">Tfg_Application</string>
    <string name="title_activity_check_in">Check_in</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">LOGIN</string>
    <string name="log_out">Log Out</string>
    <string name="loading">Loading</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="check_in">Check_In</string>
    <string name="user">User</string>
    <string name="deliciosapp">DELICIOUSAPP</string>
    <string name="starters">Starters</string>
    <string name="recipe_today">Recipe Today!</string>
    <string name="all_recipes">All recipes</string>
    <string name="breakfast">Breakfast</string>
    <string name="add_recipe">add recipe</string>

    <string name="title_activity_list_item_lead">list_item_lead</string>

    <string name="turkey_skewers">Turkey skewers</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="desserts">Desserts</string>
    <string name="sign_in">SIGN_IN</string>
    <string name="recipe_lunch">Recipe Lunch</string>

</resources>