<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >



    <TextView
        android:id="@+id/welcomebar"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@color/orange_soft"
        android:text="@string/recipe_today"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/starters"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/green_soft"
        android:text="@string/breakfast"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <Button
        android:id="@+id/buttonStarters"
        android:layout_width="48dp"
        android:layout_height="54dp"
        android:background="@mipmap/arrow_right"
        app:layout_constraintBottom_toTopOf="@+id/mainCourses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starters"
        app:layout_constraintVertical_bias="0.281"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/mainCourses"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/green_soft"
        android:text="  Mains Courses"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <Button
        android:id="@+id/buttonMainCourses"
        android:layout_width="48dp"
        android:layout_height="54dp"
        android:background="@mipmap/arrow_right"
        app:layout_constraintBottom_toTopOf="@+id/desserts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCourses"
        app:layout_constraintVertical_bias="0.293"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/desserts"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@color/green_soft"
        android:text="  Desserts"
        android:visibility="visible"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />


    <Button
        android:id="@+id/buttonDesserts"
        android:layout_width="48dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:background="@mipmap/arrow_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desserts"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/allRecipes"
        android:layout_width="156dp"
        android:layout_height="38dp"
        android:layout_marginBottom="52dp"
        android:background="@color/purple_200"
        android:text="@string/all_recipes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="119dp"
        android:layout_height="91dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="264dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/pancakes" />

</androidx.constraintlayout.widget.ConstraintLayout>